Moving credentials to .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: "./Dockerfile"
       args:
-        - TELEGRAM_TOKEN=1234567890:AABbCcdefFg-1ihj3klN-5mnO-P8qRSTuvw # Insert token obtained from @BotFather here
-        - TELEGRAM_CHAT_ID=12345678 # Insert Chat ID
+        - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+        - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
     image: binance-pump-alerts
     # image: brianleect/binance-pump-alerts:latest
     restart: unless-stopped
