--- a/config.yml
+++ b/config.yml
@@ -67,7 +67,7 @@ tdpaEmoji: ! "\U0001F3C6" # 🏆
 newListingEmoji: ! "\U0001F4F0" # 📰
 
 # Debug Params (Avoid touching it if there's no issues)
-debug: True # If false we do not print messages
+debug: False # If false we do not print messages
 resetInterval: 12h # Interval for clearing array to prevent MEM ERROR can handle up to 12h+ depending on system
 priceRetryInterval: 1s # In the case of get price fail, this is the time delay before re-attempt
 telegramRetryInterval: 1s # If telegram message fails to send, this is the time delay before re-attempt
