--- a/config.yml
+++ b/config.yml
@@ -71,8 +71,8 @@ topDumpEnabled: True
 additionalStatsEnabled: True
 # Top X amount of coins shown in the interval report, adjust to show more or less within the timeframe
 noOfReportedCoins: 5
-# Intervals for top pump and dump to be sent, Ensure its in interval + outlier_param as well
-tpdIntervals:
+# Intervals for top pump and dump to be sent, ensure its in chartIntervals + outlierIntervals as well
+tpdReportsIntervals:
   - "1h"
   - "3h"
   - "6h"
