Adding NO_OF_REPORTED_COINS to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,5 @@ services:
       - TELEGRAM_ALERT_CHAT_ID=${TELEGRAM_ALERT_CHAT_ID}
       - PUMP_EMOJI=${PUMP_EMOJI}
       - DUMP_EMOJI=${DUMP_EMOJI}
+      - NO_OF_REPORTED_COINS=${NO_OF_REPORTED_COINS}
       - DEBUG=${DEBUG}
