--- a/config.yml
+++ b/config.yml
@@ -46,15 +46,15 @@ telegramAlertChatId: 0
 # Interval between each price extract from Binance REST API
 extractInterval: 1s
 
-# List the trading currency you are interested in. Other options include 'BUSD', 'BTC' , 'ETH'
-pairsOfInterest:
-  - USDT
-
-# Optional Watchlist only mode
-# E.g. 'ADAUSDT', 'ETHUSDT' # Note that if watchlist has pairs, ONLY pairs in watchlist will be monitored
+# Watchlist only mode, if enabled, ONLY pairs in watchlist will be monitored
+# E.g. 'ADAUSDT', 'ETHUSDT'
 # watchlist:
 #   - ADAUSDT
 #   - ETHUSDT
+
+# List the trading currency you are interested in. Other options include 'BUSD', 'BTC' , 'ETH'
+pairsOfInterest:
+  - USDT
 
 # Feature params
 
