--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: "./Dockerfile"
     image: binance-pump-alerts
     # image: brianleect/binance-pump-alerts:latest
-    restart: unless-stopped
+    restart: "no"
     environment:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
@@ -16,3 +16,4 @@ services:
       - DUMP_EMOJI=${DUMP_EMOJI}
       - NO_OF_REPORTED_COINS=${NO_OF_REPORTED_COINS}
       - DEBUG=${DEBUG}
+      - RESET_INTERVAL=${RESET_INTERVAL}
