Adding dev config & start refactorign again

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+config.dev.yml
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm+all,intellij+all,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm+all,intellij+all,visualstudiocode
 
