[QOL/Fix] Round TPD to hour + remove retryInterval
Should fix TPD error. Removed leftovers from retryInterval previously.

--- a/config.yml
+++ b/config.yml
@@ -95,3 +95,5 @@ resetInterval: 6h
 priceRetryInterval: 5s
 # Disables checking and adding of new listing pairs
 checkNewListingEnabled: True
+# Disables rounding to nearest hour for first TPD if false
+tpdNearestHour: True
