--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     build:
       context: .
       dockerfile: "./Dockerfile"
-    image: binance-pump-alerts
+    image: patbaumgartner/binance-pump-alerts:latest
     # image: brianleect/binance-pump-alerts:latest
     restart: "no"
     environment:
-      - CONFIG_FILE=config.dev.yml
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
       - TELEGRAM_ALERT_CHAT_ID=${TELEGRAM_ALERT_CHAT_ID}
