--- a/config.yml
+++ b/config.yml
@@ -53,9 +53,9 @@ extractInterval: 1s
 #  - ETHUSDT
 
 # Blacklist only mode, if enabled, pairs in blacklist will be IGNORED it DOES NOT IMPACT pairsOfInterest
-blacklist:
-  - BTCUSDT
-  - ETHUSDT
+#blacklist:
+#  - BTCUSDT
+#  - ETHUSDT
 
 # List the trading currency you are interested in. Other options include 'BUSD', 'BTC' , 'ETH'
 pairsOfInterest:
